--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,10 +2,8 @@ name: Tests
 
 on:
   push:
+  workflow_dispatch:
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
 env:
   CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
@@ -18,7 +16,7 @@ env:
 
 jobs:
   rspec:
-    runs-on: ubicloud-standard-2
+    runs-on: ubuntu-24.04
 
     services:
       postgres:
@@ -67,7 +65,7 @@ jobs:
 
   playwright:
     name: playwright
-    runs-on: ubicloud-standard-4
+    runs-on: ubuntu-24.04
 
     steps:
       - uses: actions/checkout@v4
